k8s/base/janitorr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: janitorr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: janitorr.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: janitorr
            port:
              number: 8978
